@@ -1,15 +1,18 @@
 Package: lfactors
-Version: 0.5.3
-Date: 2015-09-02
+Version: 0.6.0
+Date: 2016-02-20
 Title: Factors with Levels
 Authors@R: c(person("Paul", "Bailey", role=c("aut", "cre"), email="pbailey@air.org"))
 Author: Paul Bailey [aut, cre]
 Maintainer: Paul Bailey <pbailey@air.org>
 Depends: R (>= 3.1.0), methods, stats, utils
 Suggests: testthat
-Description: Provides an extension to factors called 'lfactor' that are similar to factors but allow users to refer to 'lfactor' levels by either the level or the label.
+Description: Provides an extension to factors called 'lfactor' that are similar
+    to factors but allow users to refer to 'lfactor' levels by either the level or
+    the label.
 License: GPL-2
+RoxygenNote: 5.0.1
 NeedsCompilation: no
-Packaged: 2015-09-02 21:09:29 UTC; pbailey
+Packaged: 2016-02-19 16:35:12 UTC; pbailey
 Repository: CRAN
-Date/Publication: 2015-09-03 09:07:17
+Date/Publication: 2016-02-20 00:12:32
