@@ -1,25 +1,25 @@
-ac1c0e3086cba0d180f74d7ac20682ff *DESCRIPTION
-9e58502bb5ab8e6af0ac753fd24a5f71 *NAMESPACE
+6de5b55d1a4deb821440060d0531694c *DESCRIPTION
+64552b56c407e4558a25a1987958f04d *NAMESPACE
 625066473a3b111fbb0b3d2940a1bdc5 *R/Ops.lfactor.R
 c1a08a44c08a1650e601140561c2e3a0 *R/all.R
 a6980d01d223c0dd227cbcab68b9d6aa *R/as.numeric.lfactor.R
 c5a6ac8395b4d844f9fd47c27cb85e12 *R/assign.R
-ecbc7a807bc83c5dff8258aa7b531451 *R/droplevels.R
+e783b6fd6cba3ea16131d71a44c2aafa *R/droplevels.R
 00842be1acb92a527aade76ebc0a9d6e *R/inlf.R
-e75ef38c810263a049f8586c4f0c92eb *R/lfactor.R
+cce7316259d4f8bf32ab64bd434357f5 *R/lfactor.R
 2364742367138ea8815d0561c61dd18b *R/lfactors-package.R
 cfe4657c14acc33c6602ab7ff7f4bba6 *R/llevels.R
 ff43dd1119276d78cd299805e87b2d97 *R/mlfactor.R
 c2fae0c04feee8126dd864df4bcf4d81 *R/print.lfactor.R
 efbc277c460f7f5ccbcb25106038ef60 *R/relevel.R
-21a3ed6965f5c1cc65d95e666ffad7a7 *R/subset.R
+f8b43d6770bf9aea37c70a596dda3897 *R/subset.R
 d071fd01a2f24b614e18edb7aabec8bf *R/switchllevels.R
 2f4ef61da1ba28fb9e8d9c8ef6e2019f *R/zzz.R
-c221e9cc1eb6ada053bab7d8d59ad95b *inst/NEWS.Rd
-5db62b9dadccc5e7b64085371643b769 *man/inlf.Rd
-a2804432e666e74b9525bb51f3745c5c *man/lfactor.Rd
-e78eb2548c53bbd069a8b805d19c2e2f *man/lfactors-package.Rd
-58c496023fc4e15d9b3ff0c569ae7e78 *man/llevels.Rd
-6fdb47522b32a0b57b23c436ed68fcd4 *man/mlfactor.Rd
+c7be30039fc574861a92f4b6873b7035 *inst/NEWS.Rd
+d65d8244e95dfc7af74b358eef3b87e3 *man/inlf.Rd
+d16af87119eb037b0272e37634c69d95 *man/lfactor.Rd
+26088a7b82552110cf326c25c721eada *man/lfactors-package.Rd
+11281402960d1a15825b00d9020837d2 *man/llevels.Rd
+0e1e624e2b466b135cf24e3f3b38846e *man/mlfactor.Rd
 4f2745558b3725b2303b0f715162ddce *tests/testthat.R
-e0e4a03c6420a93426bed3592facf4e9 *tests/testthat/test_equals.R
+70f91259f4044d9cb2a0b767fdc94282 *tests/testthat/test_equals.R
