@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/lfactor.R
 \name{lfactor}
 \alias{lfactor}
@@ -56,7 +56,7 @@ all.equal(mon[3] == c("Jan", "Feb", "Mar"), mon[3] == 1:3)
 all.equal(mon[1:2] == c("Feb", "Tuesday"), mon[1:2] == c(2,-4) )
 
 # similar to Ops.factor, this gives a helpful warning and NA results
-mon >= "Jan"
+mon >= "Jan" 
 
 # \%in\% works correctly
 all.equal(mon \%in\% c(2, 3), mon \%in\% c("Feb", "Mar"))
@@ -64,6 +64,8 @@ all.equal(mon \%in\% c(2, 3), mon \%in\% c("Feb", "Mar"))
 all.equal(c(-4, 14,3,10) \%in\% mon, c("not a month", "Third December","Mar","Oct") \%in\% mon)
 # and when both left and right are lfactors
 all.equal(mon \%in\% mon, rep(TRUE,12))
+
+
 }
 \seealso{
 \code{\link[base]{factor}}
